        - INCOMPATIBLE CHANGE: make OSC 20 simpler and more correct
          (Emanuele Giaquinta).
	- implement xterm's horribly broken 1005 mouse reporting mode,
          and an alternative 1015 mode that works in non-utf-8 locales
          and has fewer limitations.
	- fix a possible bug where mouse notifications didn't work after
          startup for the upper left corner.
        - apply tinting before shading when both operations are requested.
          Previously they were intermixed when lightening and the result
          was inaccurate and confusing. Note that now a black tint yields a
          completely black image, regardless of shading (Emanuele Giaquinta).
        - avoid spurious redraws of the bg image when bg is transparent or
          when using 'root' mode (Emanuele Giaquinta).
        - fix build on XFree86.

9.09 Sat Nov 13 01:39:07 CET 2010
	- NOTICE: this release updates terminfo/termcap.
	- the bestest release ever.
        - it was verified that urxvt handles µ and μ correctly.
	- add support for blending and blurring with XRender (Emanuele Giaquinta).
	- add support for using gdk-pixbuf as image backend (Emanuele Giaquinta).
	- cleanup and minor fixes of the image code (Emanuele Giaquinta).
	- new perl extension "confirm-paste" (Emanuele Giaquinta).
	- new on_tt_paste perl hook and tt_paste perl binding (Emanuele Giaquinta).
	- new on_bell perl hook (Emanuele Giaquinta).
	- searchable-scrollback no longer ignores the first line
	  (Emanuele Giaquinta).
	- properly set VSTATUS in termios for *BSD (reported by Ed Schouten).
	- fix utmpx detection on upcoming FreeBSD 9.
	- Use COMPOUND_TEXT encoding for WM_NAME/WM_ICON_NAME value when it
	  is not fully convertible to STRING (patch by James Cloos).
        - fix a buffer overflow that would cause wrong key sequences to
          be generated for numpad keys (introduced in 9.05).
        - fix definition of sgr0 to work around limitations in luit.